# Inspectra

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_core_tables.py  0002_add_review_iteration_fields.py  0003_add_publication_tracking.py  0004_add_source_connector_credential.py  0005_add_llm_call_diagnostics.py
backend/app/: config.py  db.py  dependencies.py  logging.py  main.py
backend/app/api/: admin.py  connectors.py  health.py  publications.py  reviews.py  router.py  sessions.py  webhooks.py
backend/app/connectors/: confluence_client.py  gitlab_client.py  jira_client.py  manual_source.py
backend/app/models/: __init__.py  audit_log.py  base.py  connector_credential.py  finding.py  llm_call.py  publication.py  review_run.py  review_session.py  source_object.py  source_snapshot.py
backend/app/prompts/: review_system.ru.txt  review_user.ru.txt
backend/app/schemas/: admin.py  common.py  connectors.py  publications.py  reviews.py  sessions.py  webhooks.py
backend/app/services/: admin_service.py  audit_service.py  (+12 more)
backend/inspectra_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: docker-worker-entrypoint.sh
backend/tests/: test_diff_service.py  test_finding_merge_service.py  test_jira_webhook_service.py  test_llm_fallback.py  test_publication_service_noop.py  test_review_engine_skip_no_change.py  test_review_lifecycle_smoke.py  test_tone_policy_service.py
(+28 files in other folders)
