[project]
name = "inspectra-backend"
version = "0.1.0"
description = "Inspectra v2 backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.35",
  "psycopg[binary]==3.2.1",
  "alembic==1.13.2",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-dotenv==1.0.1",
  "httpx==0.27.2",
  "redis==5.0.8",
  "rq==1.16.2",
  "cryptography==43.0.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
